XMLtoCSV/objects/unpackaged/objects/Inventory_Order_vod__c.object
<CustomObject>
    <description>Inventory Order header object, containing general information about the Inventory Order (Order Date, Status, Approver, etc.)</description>
    <fields>
        <fullName>Approved_By_vod__c</fullName>
        <description>Captures the name of the user approving the record, given that it may be different than the selected Approver User</description>
        <label>Approved By</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Approved_Date_vod__c</fullName>
        <description>Indicates the date on which the approval occurred.</description>
        <label>Approved Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Approved_vod__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether or not this order has been approved.</description>
        <label>Approved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Approver_User_ID_vod__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The approver for this record.</description>
        <label>Approver</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Approver_Orders_vod</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>External_ID_vod__c</fullName>
        <description>External ID is used for data loading only, when order information might be integration with an external fulfillment system</description>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Order_Create_Date_vod__c</fullName>
        <description>Date on which the order was created.</description>
        <label>Order Create Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Order_For_User_vod__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The Order For User is the user who is receiving the order.</description>
        <label>Order For User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Orders_For_User_vod</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Order_Status_vod__c</fullName>
        <description>Status of the Inventory Order. Values are Saved, Pending Approval, Submitted, Completed or Cancelled</description>
        <label>Order Status</label>
        <picklist>
            <picklistValues>
                <fullName>Saved_vod</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pending_approval_vod</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Submitted_vod</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Completed_vod</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Canceled_vod</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Order_Submit_Date_vod__c</fullName>
        <description>Date the order is submitted.</description>
        <label>Order Submit Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Order_Type_vod__c</fullName>
        <description>Indicates the type of order. Can be used to classify urgency, handling or any other customer need.</description>
        <label>Order Type</label>
        <picklist>
            <picklistValues>
                <fullName>Regular</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Special</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Require_Approval_vod__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This checkbox will be set if at least one of the order lines on the order require approval for an exception.</description>
        <label>Require Approval</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Total_Order_Fulfilled_Quantity_vod__c</fullName>
        <description>This field represents the sum of the fulfilled quantity from all order lines that match this user, product, and allocation record.</description>
        <label>Total Order Quantity</label>
        <summarizedField>Inventory_Order_Line_vod__c.Order_Fulfilled_Quantity_vod__c</summarizedField>
        <summaryFilterItems>
            <field>Inventory_Order_Line_vod__c.Inventory_Order_Line_Status_vod__c</field>
            <operation>notEqual</operation>
            <value>New_vod</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Inventory_Order_Line_vod__c.Inventory_Order_Line_Status_vod__c</field>
            <operation>notEqual</operation>
            <value>Saved_vod</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Inventory_Order_Line_vod__c.Inventory_Order_Line_Status_vod__c</field>
            <operation>notEqual</operation>
            <value>Canceled_vod</value>
        </summaryFilterItems>
        <summaryForeignKey>Inventory_Order_Line_vod__c.Inventory_Order_Header_vod__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Unlock_vod__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If this field is updated to true on a submitted order, the order status will changed to &quot;Saved&quot; by the order trigger. Note that the value &quot;True&quot; is never actually saved in the unlock field. It is simply a way to unlock submitted calls. Normally only administrators will have field level security to the Unlock field.</description>
        <label>Unlock</label>
        <type>Checkbox</type>
    </fields>
    <label>Inventory Order</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>IO-{0000000}</displayFormat>
        <label>Inventory Order Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Inventory Orders</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>